# baremetal-helloqemu-rust

./: .gitmodules  Cargo.toml  LICENSE  README.md
src/: linkerscript_aarch64.ld  linkerscript_arm.ld  linkerscript_riscv64.ld  main.rs  startup_aarch64.s
