[package]
name = "baremetal-helloworld-rust"
version = "0.1.0"
edition = "2021"
authors = ["Alejandro Hernandez Samaniego alejandro@enedino.org"]
homepage = "https://github.com/aehs29/baremetal-helloqemu-rust"
description = "Baremetal QEMU examples in Rust"
license = "MIT"
license_file = "LICENSE"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
